docs: cut Playwright section down to just the commands
Drop the prose explanations, keep a one-line parenthetical for why
(yarn's dev server, Java preview flag).